// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Planet|PlanetQueue Default 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="MuiPaper-root makeStyles-paper-1219 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <p
        className="MuiTypography-root makeStyles-queueTitle-1220 MuiTypography-body1 MuiTypography-alignCenter"
      >
        Facilities
      </p>
      <ul
        className="MuiList-root MuiList-padding"
      >
        <li
          className="MuiListItem-root MuiListItem-gutters"
          disabled={false}
        >
          <div
            className="MuiListItemText-root makeStyles-itemText-1221"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
            >
              <div
                className="MuiBox-root MuiBox-root-1308"
              >
                <p
                  className="MuiTypography-root makeStyles-itemTitle-1223 MuiTypography-body1"
                >
                  Space shuttle site
                   (
                  10
                  )
                </p>
                <div
                  className="MuiBox-root MuiBox-root-1309 makeStyles-itemContent-1222"
                >
                  <div
                    className="makeStyles-itemRow-1224"
                  >
                    <div
                      className="MuiBox-root MuiBox-root-1310"
                    >
                      <span>
                        remaining: 
                      </span>
                      <span>
                        less than 5 seconds
                      </span>
                    </div>
                    <div
                      className="makeStyles-itemProgress-1226"
                    >
                      <div
                        aria-valuenow={0}
                        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
                        role="progressbar"
                      >
                        <div
                          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
                          style={
                            Object {
                              "transform": "translateX(-100%)",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </li>
        <hr
          className="MuiDivider-root makeStyles-divider-1225"
        />
        <li
          className="MuiListItem-root MuiListItem-gutters"
          disabled={false}
        >
          <div
            className="MuiListItemText-root makeStyles-itemText-1221"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
            >
              <div
                className="MuiBox-root MuiBox-root-1338"
              >
                <p
                  className="MuiTypography-root makeStyles-itemTitle-1223 MuiTypography-body1"
                >
                  Metal mine
                   (
                  25
                  )
                </p>
              </div>
            </span>
          </div>
        </li>
        <hr
          className="MuiDivider-root makeStyles-divider-1225"
        />
        <li
          className="MuiListItem-root MuiListItem-gutters"
          disabled={false}
        >
          <div
            className="MuiListItemText-root makeStyles-itemText-1221"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
            >
              <div
                className="MuiBox-root MuiBox-root-1339"
              >
                <p
                  className="MuiTypography-root makeStyles-itemTitle-1223 MuiTypography-body1"
                >
                  Refinery
                   (
                  12
                  )
                </p>
              </div>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Planet|PlanetQueue Empty 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="MuiPaper-root makeStyles-paper-1340 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <p
        className="MuiTypography-root makeStyles-queueTitle-1341 MuiTypography-body1 MuiTypography-alignCenter"
      >
        Facilities
      </p>
      <div
        className="makeStyles-emptyQueue-1348"
      >
        Queue empty.
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
